added new header images/logo, removed skills section, other minor mods

--- a/index.html
+++ b/index.html
@@ -59,13 +59,10 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#portfolio">Portfolio</a>
+                        <a class="page-scroll" href="#portfolio">Work</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#about">About</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#skills">Technical Skills</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#resume">Resume</a>
@@ -81,12 +78,12 @@
     </nav>
 
     <!-- Header -->
-    <header>
-        <div class="container">
+    <header style="background: url('ycs-landing-page-two.png');background-repeat: no-repeat; background-size: cover">
+        <div class="container" >
             <div class="intro-text">
-                <div class="intro-lead-in">Stephen Jay Young</div>
-                   <img class= "img-circle img-responsive center-block" id="ProfilePicture" src="SitePic2.jpeg" alt="profile picture" </a> </a>
-                <div class="intro-heading"><em>Web Developer</em></div>
+                <!-- <div class="intro-lead-in" style="margin-bottom: 200px; margin-top: 200px; font-size: 40px">Young Creative Space</div> -->
+                   <img class= "img-responsive center-block" id="ProfilePicture" src="ycs-logo-icon.svg" style="width: 40%; height: 40%; margin-top: 40px">
+                <div class="intro-text" style="font-size: 35px; margin-top: -85px; margin-bottom: 40px"><em>Web Development</em></div>
             </div>
         </div>
     </header>
@@ -96,7 +93,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Portfolio</h2>
+                    <h2 class="section-heading">Work</h2>
 <!--                     <h3 class="section-subheading text-muted">I like to build things that make people's lives better.</h3> -->
                 </div>
             </div>
@@ -198,6 +195,9 @@
                     <h1>About</h1>
                 </div>
             </div>
+                            <div class="col-lg-12">
+                    <img class= "img-responsive img-thumb center-block" id="ProfilePicture" src="SitePic2.jpeg" style="width: 15%; height: 15%; margin-bottom: 30px; border-radius: 5px; border: 1px solid blue">
+                </div>
             <br>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
@@ -215,225 +215,6 @@
             </div>
         </div>
     </section>
-
-    <!-- Skills -->
-    <!-- The circle icons use Font Awesome's stacked icon classes. For more information, visit http://fontawesome.io/examples/ -->
-    <section id="skills" class="services">
-        <div class="container">
-            <div class="row text-center">
-                <div class="col-lg-10 col-lg-offset-1">
-                    <h2>Technical Skills</h2>
-                   <!--  <hr class="small"> -->
-                   <br>
-                    <div class="row">
-                        <div class="col-md-3 col-sm-6">
-                            <div class="service-item">
-                                <span class="fa-stack fa-4x">
-                               <!--  <i class="fa fa-circle fa-stack-2x"></i> -->
-                                <!-- <i class= "fa-stack-1x text-primary"></i> -->
-                                <img src= "img/logos/html.png"></img>
-                            </span>
-                                <h4>
-                                    <strong>HTML</strong>
-                                </h4>
-                            </div>
-                        </div>
-                        <div class="col-md-3 col-sm-6">
-                            <div class="service-item">
-                                <span class="fa-stack fa-4x">
-                                <!-- <i class="fa fa-circle fa-stack-2x"></i> -->
-                                <img src= "img/logos/css2.png"></img>
-                            </span>
-                                <h4>
-                                    <strong>CSS</strong>
-                                </h4>
-                            </div>
-                        </div>
-                        <div class="col-md-3 col-sm-6">
-                            <div class="service-item">
-                                <span class="fa-stack fa-4x">
-                                <img src= "img/logos/javascript.png"></img>
-                                <!-- <i class="fa fa-circle fa-stack-2x"></i> -->
-                                <!-- <i class="fa fa-flask fa-stack-1x text-primary"></i> -->
-                            </span>
-                                <h4>
-                                    <strong>JavaScript</strong>
-                                </h4>
-                            </div>
-                        </div>
-                        <div class="col-md-3 col-sm-6">
-                            <div class="service-item">
-                                <span class="fa-stack fa-4x">
-                                <!-- <i class="fa fa-circle fa-stack-2x"></i> -->
-                                <img src= "img/logos/jquery.png"></img>
-                               <!--  <i class="fa fa-shield fa-stack-1x text-primary"></i> -->
-                            </span>
-                                <h4>
-                                    <strong>JQuery</strong>
-                                </h4>
-                            </div>
-                        </div>
-                    </div>
-
-                    <!-- Row 2 -->
-                    <div class="row">
-                        <div class="col-md-3 col-sm-6">
-                            <div class="service-item">
-                                <span class="fa-stack fa-4x">
-                               <!--  <i class="fa fa-circle fa-stack-2x"></i> -->
-                               <img src= "img/logos/postgres.png"></img>
-                              <!--   <i class="fa fa-cloud fa-stack-1x text-primary"></i> -->
-                            </span>
-                                <h4>
-                                    <strong>PostgreSQL</strong>
-                                </h4>
-                            </div>
-                        </div>
-                        <div class="col-md-3 col-sm-6">
-                            <div class="service-item">
-                                <span class="fa-stack fa-4x">
-                                <!-- <i class="fa fa-circle fa-stack-2x"></i> -->
-                                <img src= "img/logos/node.png"></img>
-                               <!--  <i class="fa fa-compass fa-stack-1x text-primary"></i> -->
-                            </span>
-                                <h4>
-                                    <strong>Node</strong>
-                                </h4>
-                            </div>
-                        </div>
-                        <div class="col-md-3 col-sm-6">
-                            <div class="service-item">
-                                <span class="fa-stack fa-4x">
-                               <!--  <i class="fa fa-circle fa-stack-2x"></i> -->
-                               <img src= "img/logos/github.png"></img>
-                                <!-- <i class="fa fa-flask fa-stack-1x text-primary"></i> -->
-                            </span>
-                                <h4>
-                                    <strong>Git</strong>
-                                </h4>
-                            </div>
-                        </div>
-                        <div class="col-md-3 col-sm-6">
-                            <div class="service-item">
-                                <span class="fa-stack fa-4x">
-                               <!--  <i class="fa fa-circle fa-stack-2x"></i> -->
-                                <img src= "img/logos/ajax.png"></img>
-                               <!--  <i class="fa fa-shield fa-stack-1x text-primary"></i> -->
-                            </span>
-                                <h4>
-                                    <strong>AJAX</strong>
-                                </h4>
-                            </div>
-                        </div>
-                    </div>
-
-                    <!--Row 3  -->
-                    <div class="row">
-                        <div class="col-md-3 col-sm-6">
-                            <div class="service-item">
-                                <span class="fa-stack fa-4x">
-                               <!--  <i class="fa fa-circle fa-stack-2x"></i> -->
-                               <img src= "img/logos/bootstrap.png"></img>
-                              <!--   <i class="fa fa-cloud fa-stack-1x text-primary"></i> -->
-                            </span>
-                                <h4>
-                                    <strong>Bootstrap</strong>
-                                </h4>
-                            </div>
-                        </div>
-                        <div class="col-md-3 col-sm-6">
-                            <div class="service-item">
-                                <span class="fa-stack fa-4x">
-                                <!-- <i class="fa fa-circle fa-stack-2x"></i> -->
-                                <img src= "img/logos/gulp.png"></img>
-                             <!--    <i class="fa fa-compass fa-stack-1x text-primary"></i> -->
-                            </span>
-                                <h4>
-                                    <strong>Gulp</strong>
-                                </h4>
-                            </div>
-                        </div>
-                        <div class="col-md-3 col-sm-6">
-                            <div class="service-item">
-                                <span class="fa-stack fa-4x">
-                                <!-- <i class="fa fa-circle fa-stack-2x"></i> -->
-                                 <img src= "img/logos/ember.png"></img>
-                                <!-- <i class="fa fa-flask fa-stack-1x text-primary"></i> -->
-                            </span>
-                                <h4>
-                                    <strong>Ember</strong>
-                                </h4>
-                            </div>
-                        </div>
-                        <div class="col-md-3 col-sm-6">
-                            <div class="service-item">
-                                <span class="fa-stack fa-4x">
-                                <!-- <i class="fa fa-circle fa-stack-2x"></i> -->
-                                <img src= "img/logos/backbone.png"></img>
-                            </span>
-                                <h4>
-                                    <strong>Backbone</strong>
-                                </h4>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- Row 4 -->
-                                        <!--Row 3  -->
-                    <div class="row">
-                        <div class="col-md-3 col-sm-6">
-                            <div class="service-item">
-                                <span class="fa-stack fa-4x">
-                                <!-- <i class="fa fa-circle fa-stack-2x"></i> -->
-                                 <img src= "img/logos/api.png"></img>
-                                <!-- <i class="fa fa-github fa-stack-1x text-primary"></i> -->
-                            </span>
-                                <h4>
-                                    <strong>API Manipulation</strong>
-                                </h4>
-                            </div>
-                        </div>
-<!--                         <div class="col-md-3 col-sm-6">
-                            <div class="service-item">
-                                <span class="fa-stack fa-4x">
-                                <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-compass fa-stack-1x text-primary"></i>
-                            </span>
-                                <h4>
-                                    <strong>Gulp</strong>
-                                </h4>
-                            </div>
-                        </div> -->
-<!--                         <div class="col-md-3 col-sm-6">
-                            <div class="service-item">
-                                <span class="fa-stack fa-4x">
-                                <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-flask fa-stack-1x text-primary"></i>
-                            </span>
-                                <h4>
-                                    <strong>Ember</strong>
-                                </h4>
-                            </div>
-                        </div> -->
-<!--                         <div class="col-md-3 col-sm-6">
-                            <div class="service-item">
-                                <span class="fa-stack fa-4x">
-                                <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-shield fa-stack-1x text-primary"></i>
-                            </span>
-                                <h4>
-                                    <strong>Backbone</strong>
-                                </h4>
-                            </div>
-                        </div> -->
-                    </div>
-                </div>
-                <!-- /.col-lg-10 -->
-            </div>
-            <!-- /.row -->
-        </div>
-        <!-- /.container -->
-    </section>
-
 
     <!-- Team Section -->
     <section id="resume" class="bg-light-gray">
