--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Stephen Jay Young</title>
+    <title>Young Creative Space</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
     <link href="css/agency.css" rel="stylesheet">
-
+    <link href="css/custom.css" rel="stylesheet">
     <!-- Custom Fonts -->
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
@@ -78,12 +78,12 @@
     </nav>
 
     <!-- Header -->
-    <header style="background: url('ycs-landing-page-two.png');background-repeat: no-repeat; background-size: cover">
+    <header style="background: url('ycs-landing-page-two.png');background-repeat: no-repeat; background-size: cover; padding-bottom: 100px">
         <div class="container" >
             <div class="intro-text">
                 <!-- <div class="intro-lead-in" style="margin-bottom: 200px; margin-top: 200px; font-size: 40px">Young Creative Space</div> -->
-                   <img class= "img-responsive center-block" id="ProfilePicture" src="ycs-logo-icon.svg" style="width: 40%; height: 40%; margin-top: 40px">
-                <div class="intro-text" style="font-size: 35px; margin-top: -85px; margin-bottom: 40px"><em>Web Development</em></div>
+                   <img class= "img-responsive ycs-logo center-block" src="ycs-logo-icon.svg">
+                <div class="intro-text web-dev-text"><em>Web Development</em></div>
             </div>
         </div>
     </header>
