mods to about section

--- a/index.html
+++ b/index.html
@@ -100,6 +100,20 @@
             <br>
             <div class="row">
                 <div class="col-md-4 col-sm-6 portfolio-item">
+                    <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
+                        <div class="portfolio-hover">
+                            <div class="portfolio-hover-content">
+                                <i class="fa fa-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img src="img/dental-sites.jpg" class="img-responsive" alt="">
+                    </a>
+                    <div class="portfolio-caption">
+                        <h4>Dental Websites</h4>
+                        <p class="text-muted">Single page websites created for the company Tyson Steele</p>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-6 portfolio-item">
                     <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
@@ -111,20 +125,6 @@
                     <div class="portfolio-caption">
                         <h4>the Jbac</h4>
                         <p class="text-muted">Website for the Jacuzzi Boys Athletic Club</p>
-                    </div>
-                </div>
-                <div class="col-md-4 col-sm-6 portfolio-item">
-                    <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
-                        <div class="portfolio-hover">
-                            <div class="portfolio-hover-content">
-                                <i class="fa fa-plus fa-3x"></i>
-                            </div>
-                        </div>
-                        <img src="img/Iceland.JPG" class="img-responsive" alt="">
-                    </a>
-                    <div class="portfolio-caption">
-                        <h4>Hello Iceland</h4>
-                        <p class="text-muted">Website documenting an Icelandic adventure</p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
@@ -195,15 +195,12 @@
                     <h1>About</h1>
                 </div>
             </div>
-                            <div class="col-lg-12">
+<!--                             <div class="col-lg-12">
                     <img class= "img-responsive img-thumb center-block" id="ProfilePicture" src="SitePic2.jpeg" style="width: 15%; height: 15%; margin-bottom: 30px; border-radius: 5px; border: 1px solid blue">
-                </div>
+                </div> -->
             <br>
             <div class="row">
-                <div class="col-lg-4 col-lg-offset-2">
-                    <p class="lead"><b> My Coding Roots: </b>I coded <a href="https://github.com/StephenJayYoung">Every.Single.Day</a> for the last year, and since then have been creating a new website every two weeks -- and I haven't even come close to getting sick of it. I got my start at <a href="http://www.portlandcodeschool.com/">Portland Code School</a>, and since then, I've taken a number of classes, read nerdy books, worked on projects for various clients, and taught students the ways of JavaScript and other languages, tools and frameworks. </p>
-                </div>
-                <div class="col-lg-4">
+                <div class="col-lg-8 col-lg-offset-2">
                     <p class = "lead"><b>My Mission: </b>My goal as a developer (and as a person) is to help build meaningful communities - so that the people involved in them can feel more fulfilled, be more productive, and become happier human beings. Check out my resume below to get a feel for how I've gone about doing this, or click on the links above to view some of the projects I've been working on!
                     </p>
                 </div>
@@ -234,7 +231,7 @@
                 <div class="col-lg-6 text-left Education">
                     <h4><b>Education</b></h4>
                     <p><b><u>Portland Code School</u></b>
-                    <p>Full Stack Javascript (August-December 2014) Advanced Front End Development (July 2014)<p>
+                    <p>Full Stack Javascript (August-December 2014)<br> Advanced Front End Development (July 2014)<p>
                     <p><b><u>Saint Joseph's University</u></b></p>
                     <p>Masters in International Marketing (September-May 2010)</p>
                     <p>Bachelor of Science in Business Administration (September 2005-May 2009)<p>
@@ -242,21 +239,21 @@
                 </div>
                 <div class="col-lg-6 text-left Experience">
                     <h4><b>Experience</b></h4>
-                    <p><b><u>Portland Code School</u></b>
-                    <p>Full stack JavaScript TA (July 2015-Present)</p>
-                    <ul>
-                      <li>Facilitated the learning of Full Stack JavaScript among two different classes of students</li>
-                      <li>Created customized JS problems in order to deepen students understanding of class material</li>
-                      <li>Explained complex JavaScript problems to students during office hours</li>
-                      <li>Collaborated with teaching staff to ensure that students were understanding concepts in a timely manner </li>
-                    </ul>
-                    <p><b><u>Young Creative Space</u></b>
+                    <p><b><u>Young Creative Space</u></b></p>
                     <p>Freelance Web Development (December 2014-Present)</p>
                     <ul>
                       <li>Created websites and applications from the ground up</li>
                       <li>Manipulated API’s to display functionality from various social media sites </li>
                       <li>Communicated with clients to assure that projects met expectations and were completed in a timely manner</li>
                       <li>Engaged in continued education in order to sharpen current skills and to continue to learn</li>
+                    </ul>
+                    <p><b><u>Portland Code School</u></b>
+                    <p>Full stack JavaScript TA (July 2015-November 2015)</p>
+                    <ul>
+                      <li>Facilitated the learning of Full Stack JavaScript among two different classes of students</li>
+                      <li>Created customized JS problems in order to deepen students understanding of class material</li>
+                      <li>Explained complex JavaScript problems to students during office hours</li>
+                      <li>Collaborated with teaching staff to ensure that students were understanding concepts in a timely manner </li>
                     </ul>
                 </div>
             </div>
@@ -374,13 +371,8 @@
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
                             <!-- Project Details Go Here -->
-                            <h2><a href="http://stephenjayyoung.github.io/Iceland">Hello Iceland</a></h2>
-                            <p class="item-intro text-muted"></p>
-                            <a href="http://stephenjayyoung.github.io/Iceland">
-                            <img class="img-responsive img-centered" src="img/Iceland.JPG" alt=""></a>
-                            <p>This website uses the Jekyll template "Grid Gallery," with two additional pages. The first page, entitled "Stories," utilizes modified code from a Bootstrap template, and the second page, entitled "#YoungBoyzInIceland," utilizes the Instagram API to display all of the photos on Instagram that use the hashtag #YoungBoyzInIceland.</p>
-                            <p><b>Check it out here: <a href="http://www.youngboyziniceland.com/"> www.youngboyziniceland.com</b></a>
-                            </p>
+                            <h2>Dental Websites</h2>
+                            <p>Coming Soon...</p>
                             <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
                         </div>
                     </div>
