--- a/index.html
+++ b/index.html
@@ -78,12 +78,12 @@
     </nav>
 
     <!-- Header -->
-    <header style="background: url('ycs-landing-page-two.png');background-repeat: no-repeat; background-size: cover; padding-bottom: 100px">
+    <header style="background: url('redownloaded-header.jpg');background-repeat: no-repeat; background-size: cover; padding-bottom: 100px">
         <div class="container" >
             <div class="intro-text">
                 <!-- <div class="intro-lead-in" style="margin-bottom: 200px; margin-top: 200px; font-size: 40px">Young Creative Space</div> -->
                    <img class= "img-responsive ycs-logo center-block" src="ycs-logo-icon.svg">
-                <div class="intro-text web-dev-text"><em>Web Development</em></div>
+                <div class="intro-text web-dev-text"><em>Clean &amp; Simple Web Development</em></div>
             </div>
         </div>
     </header>
