--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 
     <title>Young Creative Space</title>
 
+       <link rel="shortcut icon" href="ycs-favicon.png">
+
+
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
@@ -336,7 +339,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <span class="copyright">Copyright &copy; Stephen Jay Young 2015</span>
+                    <span class="copyright">Copyright &copy; Young Creative Space 2016</span>
                 </div>
                 <div class="col-md-4">
                     <ul class="list-inline social-buttons">
