--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                             <article class="portfolio-item">
                                 <div class="portfolio-image">
                                     <a data-toggle="modal" data-target="#dental-websites" href="#">
-                                        <img src="images/tyson-steele-ss.png" style="border: 1px solid #000 !important"  alt="Dental Websites">
+                                        <img src="images/optimized/tyson-steele-ss.png" style="border: 1px solid #000 !important"  alt="Dental Websites">
                                     </a>
                                 </div>
 
@@ -137,7 +137,7 @@
                             <article class="portfolio-item">
                                 <div class="portfolio-image">
                                     <a data-toggle="modal" data-target="#code-community" href="#">
-                                        <img src="images/code-community-ss.png" style="border: 1px solid #000 !important"  alt="Portland Code Community">
+                                        <img src="images/optimized/code-community-ss.png" style="border: 1px solid #000 !important"  alt="Portland Code Community">
                                     </a>
                                 </div>
 
@@ -165,11 +165,11 @@
                             <article class="portfolio-item">
                                 <div class="portfolio-image">
                                     <a data-toggle="modal" data-target="#eternal-education" href="#">
-                                        <img src="images/eegd-ss.png" style="border: 1px solid #000 !important"  alt="Eternal Education Gift Donation">
+                                        <img src="images/optimized/eegd-ss.png" style="border: 1px solid #000 !important"  alt="Eternal Education Gift Donation">
                                     </a>
                                 </div>
 
-                                <!-- Eternlal Education Gift Donation CONTENT -->
+                                <!-- Eternal Education Gift Donation CONTENT -->
                                 <div class="modal fade" id="eternal-education" tabindex="-1" role="dialog" aria-hidden="true">
                                     <div class="modal-dialog">
                                         <div class="modal-body">
@@ -218,7 +218,7 @@
                             <article class="portfolio-item" >
                                 <div class="portfolio-image">
                                     <a data-toggle="modal" data-target="#family-care" href="#">
-                                        <img src="images/the-jbac-ss.png" style="border: 1px solid #000 !important" alt="Jacuzzi Boys Athletic Club">
+                                        <img src="images/optimized/the-jbac-ss.png" style="border: 1px solid #000 !important" alt="Jacuzzi Boys Athletic Club">
                                     </a>
                                 </div>
 
@@ -232,7 +232,7 @@
                                                     <h4 class="modal-title">Jacuzzi Boys Athletic Club</h4>
                                                 </div>
                                                 <div class="modal-body">
-                                                    <img src="images/jbac-zoomed.jpg" alt="Jbac Photo" class="img-responsive hidden-xxs hidden-xs" /><br />
+                                                    <!-- <img src="images/jbac-zoomed.jpg" alt="Jbac Photo" class="img-responsive hidden-xxs hidden-xs" /><br /> -->
                                                     <p>I created this website for a local Portland running club, of which I am a proud member.
                                                     <a href="http://www.thejbac.com/" target="_blank">thejbac.com</a>
                                                     </p>
@@ -248,7 +248,7 @@
                 </section>
 
 				<!-- About -->
-				<section class=" parallax" style="background: url(images/mountains-background.jpg); background-size: cover; background-repeat: no-repeat; margin-top:0;padding-top:30px;margin-bottom:0;padding-bottom:30px;" data-stellar-background-ratio=".92">
+				<section class=" parallax" style="background: url(images/optimized/mountains-background.jpg); background-size: cover; background-repeat: no-repeat; margin-top:0;padding-top:30px;margin-bottom:0;padding-bottom:30px;" data-stellar-background-ratio=".92">
 					<div class="container clearfix">
 						<div class="nobottommargin">&nbsp;</div>
 						<div class="nobottommargin col_last">
