remove asynch requests

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 
 	<!-- External JavaScripts
 	============================================= -->
-	<script async type="text/javascript" src="js/jquery.js"></script>
-	<script async type="text/javascript" src="js/plugins.js"></script>
+	<script type="text/javascript" src="js/jquery.js"></script>
+	<script type="text/javascript" src="js/plugins.js"></script>
 
 	<!-- Document Title
 	============================================= -->
@@ -334,7 +334,7 @@
 
                         </form>
 
-                        <script async type="text/javascript">
+                        <script type="text/javascript">
 
                             $("#template-contactform").validate({
                                 submitHandler: function(form) {
@@ -418,7 +418,7 @@
 	============================================= -->
 
 
-        <script async type="text/javascript" src="js/functions.js"></script>
+        <script type="text/javascript" src="js/functions.js"></script>
 
 
 </body>
