added url for design website

--- a/index.html
+++ b/index.html
@@ -206,7 +206,10 @@
                                                     <h4 class="modal-title">One Design Per Day</h4>
                                                 </div>
                                                 <div class="modal-body">
-                                                    <p>This website was created as a way for me to showcase my logo/design chops, and to keep me accountable for creating new designs and sharpening my skillz. </p>
+                                                    <p>This website was created as a way for me to showcase my logo/design chops, and to keep me accountable for creating new designs and sharpening my skillz. <br>
+                                                    <a href="http://youngcreativetesting.co/" target = "_blank">one-design-per-day.com</a>
+                                                    </p>
+
                                                 </div>
                                             </div>
                                         </div>
