updated the one design per day link

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                                                 </div>
                                                 <div class="modal-body">
                                                     <p>This website was created as a way for me to showcase my logo/design chops, and to keep me accountable for creating new designs and sharpening my skillz. <br>
-                                                    <a href="http://youngcreativetesting.co/" target = "_blank">one-design-per-day.com</a>
+                                                    <a href="http://onedesignperday.space/" target = "_blank">one-design-per-day.space</a>
                                                     </p>
 
                                                 </div>
