added some meta info

--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" type="text/css" />
 
+    <meta name="description" content="Clean and Simple Web Development by Stephen Jay Young"/>
+    <meta name="keywords" content="web development, Stephen Jay Young, small business websites, portland web development" />
+
 	<link rel="stylesheet" href="css/responsive.css" type="text/css" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<!--[if lt IE 9]>
