--- a/index.html
+++ b/index.html
@@ -270,116 +270,63 @@
 				</section>
 				<!-- END TESTIMONIALS -->
 
-        <!-- Content
-        ============================================= -->
-        <section id="contact">
-
-            <div class="content-wrap">
-
-                <div class="container clearfix">
-
-                    <!-- Postcontent
-                    ============================================= -->
-                    <div class="postcontent nobottommargin">
-
-                        <h3>Let's Make Something Together</h3>
-
-                        <div id="contact-form-result" data-notify-type="success" data-notify-msg="<i class=icon-ok-sign></i> Message Sent Successfully!"></div>
-
-                        <form class="nobottommargin" id="template-contactform" name="template-contactform" action="include/sendemail.php" method="post">
-
-                            <div class="form-process"></div>
-
-                            <div class="col_one_third">
-                                <label for="template-contactform-name">Name <small>*</small></label>
-                                <input type="text" id="template-contactform-name" name="template-contactform-name" value="" class="sm-form-control required" />
+    <!-- Contact Section -->
+    <section id="contact" class="bg-info">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading" style="margin: 20px">Let's Make Something Together!</h2>
+                    <h3 class="section-subheading text-muted"></h3>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-12">
+                    <form name="sentMessage" id="contactForm" novalidate>
+                        <div class="row">
+                            <div class="col-md-6">
+                                <div class="form-group">
+                                    <input type="text" class="form-control" placeholder="Your Name *" id="name" required data-validation-required-message="Please enter your name.">
+                                    <p class="help-block text-danger"></p>
+                                </div>
+                                <div class="form-group">
+                                    <input type="email" class="form-control" placeholder="Your Email *" id="email" required data-validation-required-message="Please enter your email address.">
+                                    <p class="help-block text-danger"></p>
+                                </div>
+                                <div class="form-group">
+                                    <input type="tel" class="form-control" placeholder="Your Phone *" id="phone" required data-validation-required-message="Please enter your phone number.">
+                                    <p class="help-block text-danger"></p>
+                                </div>
                             </div>
-
-                            <div class="col_one_third">
-                                <label for="template-contactform-email">Email <small>*</small></label>
-                                <input type="email" id="template-contactform-email" name="template-contactform-email" value="" class="required email sm-form-control" />
+                            <div class="col-md-6">
+                                <div class="form-group">
+                                    <textarea class="form-control" placeholder="Your Message *" id="message" required data-validation-required-message="Please enter a message."></textarea>
+                                    <p class="help-block text-danger"></p>
+                                </div>
                             </div>
-
-                            <div class="col_one_third col_last">
-                                <label for="template-contactform-phone">Phone</label>
-                                <input type="text" id="template-contactform-phone" name="template-contactform-phone" value="" class="sm-form-control" />
+                            <div class="clearfix"></div>
+                            <div class="col-lg-12 text-center">
+                                <div id="success"></div>
+                                <button type="submit" class="button button-border button-light button-rounded button-large nobottommargin notopmargin">Send Message</button>
                             </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+            <br>
+        </div>
+    </section>
 
-                            <div class="clear"></div>
 
-                            <div class="col_two_third">
-                                <label for="template-contactform-subject">Subject <small>*</small></label>
-                                <input type="text" id="template-contactform-subject" name="template-contactform-subject" value="" class="required sm-form-control" />
-                            </div>
-
-                            <div class="col_one_third col_last">
-                                <label for="template-contactform-service">Service</label>
-                                <select id="template-contactform-service" name="template-contactform-service" class="sm-form-control">
-                                    <option value="">-- Select One --</option>
-                                    <option value="Wordpress">Web Development</option>
-                                    <option value="PHP / MySQL">Marketing</option>
-                                    <option value="HTML5 / CSS3">Graphic Design</option>
-                                    <option value="Graphic Design">Other</option>
-                                </select>
-                            </div>
-
-                            <div class="clear"></div>
-
-                            <div class="col_full">
-                                <label for="template-contactform-message">Message <small>*</small></label>
-                                <textarea class="required sm-form-control" id="template-contactform-message" name="template-contactform-message" rows="6" cols="30"></textarea>
-                            </div>
-
-                            <div class="col_full hidden">
-                                <input type="text" id="template-contactform-botcheck" name="template-contactform-botcheck" value="" class="sm-form-control" />
-                            </div>
-
-                            <div class="col_full">
-                                <button class="button button-3d nomargin" type="submit" id="template-contactform-submit" name="template-contactform-submit" value="submit">Send Message</button>
-                            </div>
-
-                        </form>
-
-                        <script type="text/javascript">
-
-                            $("#template-contactform").validate({
-                                submitHandler: function(form) {
-                                    $('.form-process').fadeIn();
-                                    $(form).ajaxSubmit({
-                                        target: '#contact-form-result',
-                                        success: function() {
-                                            $('.form-process').fadeOut();
-                                            $(form).find('.sm-form-control').val('');
-                                            $('#contact-form-result').attr('data-notify-msg', $('#contact-form-result').html()).html('');
-                                            SEMICOLON.widget.notifications($('#contact-form-result'));
-                                        }
-                                    });
-                                }
-                            });
-
-                        </script>
-
-                    </div><!-- .postcontent end -->
 
                     <!-- Sidebar
                     ============================================= -->
-                    <div class="sidebar col_last nobottommargin">
+ <!--                    <div class="sidebar col_last nobottommargin">
 
                         <abbr title="Email Address" style="font-size: 17px"><strong>Email:</strong></abbr> StephenJayYoung@gmail.com
                            <a href="https://github.com/StephenJayYoung"> <i class="fa fa-github fa-3x" aria-hidden="true" style="margin: 10px"></i></a>
                             <a href="https://www.linkedin.com/in/stephen-young-48832633"><i class="fa fa-linkedin fa-3x" aria-hidden="true"></i></a>
 
-                    </div><!-- .sidebar end -->
-
-                </div>
-
-            </div>
-
-        </section><!-- #content end -->
-
-
-
-
+                    </div> --><!-- .sidebar end -->
 
 
 		<!-- Footer
