--- a/index.html
+++ b/index.html
@@ -373,6 +373,10 @@
 
         <script type="text/javascript" src="js/functions.js"></script>
 
+        <!-- Contact Form JavaScript -->
+        <script src="js/jqBootstrapValidation.js"></script>
+        <script src="js/contact_me.js"></script>
+
 
 </body>
 </html>
