--- a/index.html
+++ b/index.html
@@ -268,48 +268,20 @@
 				<!-- END TESTIMONIALS -->
 
     <!-- Contact Section -->
-    <section id="contact" class="bg-info">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2 class="section-heading" style="margin: 20px">Let's Make Something Together!</h2>
-                    <h3 class="section-subheading text-muted"></h3>
-                </div>
+    <section id="contact" class="text-center" style="color: #fff">
+        <div class="row">
+            <div class="col-lg-8 col-lg-offset-2 container">
+                <h2 style="color: #fff; margin-top: 30px">Let's Make Something Together!</h2>
+                <p class="lead">I am available for: full time work, contract work, consulting, or a conversation over a cup of coffee or a beer. Please don't hesitate to shoot me a line either via phone or email if you would like to connect!</p>
+                <ul class="list-inline banner-social-buttons">
+                    <li style="margin-bottom: 10px">
+                        <a href="tel:+16099752356" class="btn btn-default btn-lg"><i class="fa fa-phone fa-fw"></i> <span class="network-name">609-975-2356</span></a>
+                    </li>
+                    <li>
+                        <a href="mailto:stephenjayyoung@gmail.com" class="btn btn-default btn-lg"><i class="fa fa-envelope fa-fw"></i> <span class="network-name">StephenJayYoung@gmail.com</span></a>
+                    </li>
+                </ul>
             </div>
-            <div class="row">
-                <div class="col-lg-12">
-                    <form name="sentMessage" id="contactForm" novalidate>
-                        <div class="row">
-                            <div class="col-md-6">
-                                <div class="form-group">
-                                    <input type="text" class="form-control" placeholder="Your Name *" id="name" required data-validation-required-message="Please enter your name.">
-                                    <p class="help-block text-danger"></p>
-                                </div>
-                                <div class="form-group">
-                                    <input type="email" class="form-control" placeholder="Your Email *" id="email" required data-validation-required-message="Please enter your email address.">
-                                    <p class="help-block text-danger"></p>
-                                </div>
-                                <div class="form-group">
-                                    <input type="tel" class="form-control" placeholder="Your Phone *" id="phone" required data-validation-required-message="Please enter your phone number.">
-                                    <p class="help-block text-danger"></p>
-                                </div>
-                            </div>
-                            <div class="col-md-6">
-                                <div class="form-group">
-                                    <textarea class="form-control" placeholder="Your Message *" id="message" required data-validation-required-message="Please enter a message."></textarea>
-                                    <p class="help-block text-danger"></p>
-                                </div>
-                            </div>
-                            <div class="clearfix"></div>
-                            <div class="col-lg-12 text-center">
-                                <div id="success"></div>
-                                <button type="submit" class="button button-border button-light button-rounded button-large nobottommargin notopmargin">Send Message</button>
-                            </div>
-                        </div>
-                    </form>
-                </div>
-            </div>
-            <br>
         </div>
     </section>
 
@@ -372,10 +344,7 @@
     <script type="text/javascript" src="js/plugins.js"></script>
     <script type="text/javascript" src="js/functions.js"></script>
 
-    <!-- Bootstrap Core JavaScript -->
-    <script src="js/bootstrap.min.js"></script>
 
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
 
         <!-- Contact Form JavaScript -->
         <script src="js/jqBootstrapValidation.js"></script>
