added a container to contact section and fixed overflow

--- a/index.html
+++ b/index.html
@@ -269,34 +269,24 @@
 
     <!-- Contact Section -->
     <section id="contact" class="text-center" style="color: #fff">
-        <div class="row">
-            <div class="col-lg-8 col-lg-offset-2 container">
-                <h2 style="color: #fff; margin-top: 30px">Let's Make Something Together!</h2>
-                <p class="lead">I am available for: full time work, contract work, consulting, or a conversation over a cup of coffee or a beer. Please don't hesitate to shoot me a line either via phone or email if you would like to connect!</p>
-                <ul class="list-inline banner-social-buttons">
-                    <li style="margin-bottom: 10px">
-                        <a href="tel:+16099752356" class="btn btn-default btn-lg"><i class="fa fa-phone fa-fw"></i> <span class="network-name">609-975-2356</span></a>
-                    </li>
-                    <li>
-                        <a href="mailto:stephenjayyoung@gmail.com" class="btn btn-default btn-lg"><i class="fa fa-envelope fa-fw"></i> <span class="network-name">StephenJayYoung@gmail.com</span></a>
-                    </li>
-                </ul>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 col-lg-offset-2">
+                    <h2 style="color: #fff; margin-top: 30px">Let's Make Something Together!</h2>
+                    <p class="lead">I am available for: full time work, contract work, consulting, or a conversation over a cup of coffee or a beer. Please don't hesitate to contact me either via phone or email if you would like to connect!</p>
+                    <ul class="list-inline banner-social-buttons">
+                        <li style="margin-bottom: 10px">
+                            <a href="tel:+16099752356" class="btn btn-default btn-lg"><i class="fa fa-phone fa-fw"></i> <span class="network-name">609-975-2356</span></a>
+                        </li>
+                        <br>
+                        <li>
+                            <a href="mailto:stephenjayyoung@gmail.com" class="btn btn-default btn-lg"><i class="fa fa-envelope fa-fw"></i> <span class="network-name">StephenJayYoung@gmail.com</span></a>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
     </section>
-
-
-
-                    <!-- Sidebar
-                    ============================================= -->
- <!--                    <div class="sidebar col_last nobottommargin">
-
-                        <abbr title="Email Address" style="font-size: 17px"><strong>Email:</strong></abbr> StephenJayYoung@gmail.com
-                           <a href="https://github.com/StephenJayYoung"> <i class="fa fa-github fa-3x" aria-hidden="true" style="margin: 10px"></i></a>
-                            <a href="https://www.linkedin.com/in/stephen-young-48832633"><i class="fa fa-linkedin fa-3x" aria-hidden="true"></i></a>
-
-                    </div> --><!-- .sidebar end -->
-
 
 		<!-- Footer
 		============================================= -->
